# ESP32_NESM

./: CMakeLists.txt  README.md  partitions.csv
drivers/: bme280.c  bme280.h  oled.c  oled.h  oled_Font.h  spi.c  spi.h
main/: CMakeLists.txt  app_data.h  board_config.h  config_manager.c  config_manager.h  display_service.c  display_service.h  local_ui.c  local_ui.h  main.c  mqtt_manager.c  mqtt_manager.h  ota_manager.c  ota_manager.h  sensor_service.c  sensor_service.h  wifi_manager.c  wifi_manager.h
